// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test File ProductBox ProductBox with 3 column 1`] = `
<div
  className="Product__ProductItem-s1fzb5ed-0 kAOMey"
>
  <picture
    className="SquareBox__BoxSquare-buzb9n-0 csFNBJ"
  >
    <div
      className="SquareBox__BoxSquareInner-buzb9n-1 ebtWZu"
    />
  </picture>
  <div
    className="Product__ProductTitle-s1fzb5ed-1 cuXePX"
  >
    Gabinete Slim DT-100BK C/Fonte PS-200 FX C3TECH S/Cabo
  </div>
  <div
    className="Product__ProductButtons-s1fzb5ed-5 jeLvUD"
  >
    <a
      className="Product__ProductBtnDetails-s1fzb5ed-6 hNZFmZ"
      href="/product/gabinete-slim-dt-100bk-c-fonte-ps-200-fx-c3tech"
      onClick={[Function]}
    >
      Ver Detalhes
    </a>
  </div>
</div>
`;

exports[`Test File ProductBox ProductBox with 4 column 1`] = `
<div
  className="Product__ProductItem-s1fzb5ed-0 gkCshv"
>
  <picture
    className="SquareBox__BoxSquare-buzb9n-0 csFNBJ"
  >
    <div
      className="SquareBox__BoxSquareInner-buzb9n-1 ebtWZu"
    />
  </picture>
  <div
    className="Product__ProductTitle-s1fzb5ed-1 cuXePX"
  >
    Gabinete Slim DT-100BK C/Fonte PS-200 FX C3TECH S/Cabo
  </div>
  <div
    className="Product__ProductButtons-s1fzb5ed-5 jeLvUD"
  >
    <a
      className="Product__ProductBtnDetails-s1fzb5ed-6 hNZFmZ"
      href="/product/gabinete-slim-dt-100bk-c-fonte-ps-200-fx-c3tech"
      onClick={[Function]}
    >
      Ver Detalhes
    </a>
  </div>
</div>
`;
